<resources>
    <string name="app_name" translatable="false">Subnet Explorer</string>
    <string name="TitreMain" translatable="false">Placeholder</string>
    <string name="calculateur_ip">Calculateur d\'IP</string>
    <string name="filler" translatable="false">filler</string>
    <string name="calculateur_vlsm">Calculateur VLSM</string>
    <string name="analyseur_wi_fi">Analyseur WI-FI</string>
    <string name="langage">Langage : FR</string>
    <string name="informations" translatable="false">Informations</string>
    <string name="adresse_ip">Adresse IP :</string>
    <string name="envoi">Envoi</string>
    <string name="masque_suffixe">Masque :</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="adresse_reseau">Adresse réseau :</string>
    <string name="adresse_de_diffusion">Adresse de diffusion :</string>
    <string name="plage">Plage :</string>
    <string name="nombre_d_adresses">Nombre d\'adresses :</string>
    <string name="ParpaingInformations">Cette application est un projet d\'étude en binôme, réalisé lors de notre deuxième année de BUT Réseaux et Télécoms. \n\n Notre application vous permets d\'obtenir tous les renseignements utiles sur une adresse IP ( Adresse de diffusion, masque et adresse réseau, plage d\'adresse et nombre d\'adresse disponible). L\'application vous permet aussi de trouver le nombre de sous-réseaux possibles pour un bloc d’adresses réseau donné. La dernière proposition est un analyseur de wifi. \n\nPour informations, problèmes ou autres, n\'hésitez pas à nous contacter :</string>
    <string name="taille">Taille :</string>
    <string name="wi_fi" translatable="false">WI-FI</string>
    <string name="SR_list">(SR1/SR2/.../SRn)</string>
    <string name="configuration_interfaces">Configuration interfaces</string>
    <string name="indications_interfaces">Indications sur les interfaces : \n -Dummy : similaire à l\'interface de Loopback \n -Wlan : connexion WI-FI \n -Rmnet : connexion cellulaire \n -Loopback : interface virtuelle constament activée</string>
    <string name="ssid" translatable="false">SSID :</string>
    <string name="mail1" translatable="false"><a href="mailto:max.vallet@outlook.fr">max.vallet@outlook.fr</a></string>
    <string name="mail2" translatable="false"><a href="mailto:zian.dupraz-rollin8@etu.univ-lorraine.fr">zian.dupraz-rollin8@etu.univ-lorraine.fr</a></string>
    <string name="warning_text">Note : certaines fonctionnalités peuvent dysfonctionner si les services de localisation sont désactivés</string>
</resources>