<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/MainBannerButton"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:src="@drawable/main_banner_button"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:onClick=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        tools:ignore="OnClick" />
    <ImageButton
        android:id="@+id/MainBannerButtonCross"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:src="@drawable/main_banner_button_cross"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:onClick=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        tools:ignore="OnClick" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24.5dp"
        android:textColor="#FFFFFF"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginLeft="33dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/MainButtonIP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/calculateur_ip"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/theme"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/MainButtonVLSM"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/calculateur_vlsm"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/theme"
        app:layout_constraintTop_toTopOf="@id/MainButtonIP"
        app:layout_constraintBottom_toBottomOf="@id/MainButtonWIFI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/MainButtonWIFI"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/analyseur_wi_fi"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/theme"
        android:layout_marginTop="203dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/MainBannerOpened"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:background="#CCCCCC"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />

        <Button
            android:id="@+id/MainButtonLang"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.1"
            android:text="@string/langage"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="33dp"
            android:backgroundTint="@color/theme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/MainBannerOpened"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/MainButtonInfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/informations"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/theme"
            android:gravity="top"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="@id/MainButtonLang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/MainBannerOpened"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>