<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".IP">

    <ImageButton
        android:id="@+id/MainBannerButtonHome"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:src="@drawable/main_button_home"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        android:onClick=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="OnClick" />


    <TextView
        android:id="@+id/IPBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme"
        android:text="@string/calculateur_ip"
        android:textAlignment="center"
        android:textSize="24.5dp"
        android:textColor="#FFFFFF"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/IPTextIP"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/adresse_ip"
        android:textSize="18dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/IPButtonIP"/>

    <EditText
        android:id="@+id/IPBoxIP"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintVertical_bias="0"
        android:text=""
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:hint="X.X.X.X"
        android:inputType="date"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toTopOf="@id/IPTextIP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/IPButtonIP" />

    <TextView
        android:id="@+id/IPTextMask"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/masque_suffixe"
        android:textSize="18dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toTopOf="@id/IPTextIP"
        app:layout_constraintBottom_toBottomOf="@id/IPNetworkAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/IPButtonIP"/>

    <EditText
        android:id="@+id/IPBoxMask"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintVertical_bias="0"
        android:text=""
        android:textSize="18dp"
        android:inputType="text"
        android:hint="X.X.X.X | X | /X"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toTopOf="@id/IPTextMask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/IPButtonIP" />

    <Button
        android:id="@+id/IPButtonIP"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/theme"
        android:text="@string/envoi"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:onClick=""
        android:layout_marginLeft="230dp"
        android:layout_marginTop="25dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="@id/IPTextMask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/IPBoxIP"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/IPNetworkAddress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/adresse_reseau"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="@id/IPTextMask"
        app:layout_constraintBottom_toBottomOf="@id/IPBroadcastAddress"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/IPNetworkAddressBox"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginLeft="160dp"
        app:layout_constraintTop_toTopOf="@id/IPTextMask"
        app:layout_constraintBottom_toBottomOf="@id/IPBroadcastAddress"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/IPBroadcastAddress"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/adresse_de_diffusion"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="@id/IPNetworkAddress"
        app:layout_constraintBottom_toBottomOf="@id/IPRange"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/IPBroadcastAddressBox"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginLeft="180dp"
        app:layout_constraintTop_toTopOf="@id/IPNetworkAddress"
        app:layout_constraintBottom_toBottomOf="@id/IPRange"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/IPRange"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/plage"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="@id/IPBroadcastAddress"
        app:layout_constraintBottom_toBottomOf="@id/IPAvailableAddress"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/IPRangeBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginLeft="70dp"
        app:layout_constraintTop_toTopOf="@id/IPBroadcastAddress"
        app:layout_constraintBottom_toBottomOf="@id/IPAvailableAddress"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/IPAvailableAddress"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_d_adresses"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="@id/IPRange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/IPAvailableAddressBox"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginLeft="180dp"
        app:layout_constraintTop_toTopOf="@id/IPRange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/IPTextMask"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>